# AgentState

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: demo.rs
src/: brain.rs  federation.rs  lib.rs  main.rs  storage.rs
tests/: pressure_test.rs  storage_tests.rs
