[package]
name = "agent-brain"
version = "0.1.0"
edition = "2021"
description = "A Rust-based AI agent core engine with local embeddings and vector search"

[dependencies]
# The AI Stack (HuggingFace Candle)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

# The Database Stack
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

[lib]
name = "agent_brain"
path = "src/lib.rs"

[[bin]]
name = "agent-brain"
path = "src/main.rs"
